# ProMo13

./: .gitignore  Dockerfile  Dockerfile1  Dockerfile_01  Dockerfile__  Dockerfile_keep  INSTALL.md  Makefile  README.md  conf.py  config.json  constants.py  convert_svg_to_png.py  docker-compose.yml  docker_instructions.md  docker_windows.ps1  index.rst  pyproject.toml  pytest.ini  requirements.txt  requirements__.txt  run_docker.sh  sample_variables_definition_order.txt  test_equation_parser.py  test_equations_sequence_order.txt  tree.txt
OLD_TESTS/: ProMo_RDF  gugus.ttl  level1.ttl  ui_qudt_fetch.ui
OLD_TESTS/Matlab/: main.m  stacked_controllers.m
OLD_TESTS/Other matlab/: FunctionTest.m  MultiDimVar.m  MultiDimVar_.m
OLD_TESTS/code_gen/: test.m
OLD_TESTS/tests_heinz/: FOAF.md  QuantityKind_triples.txt  Unit_triples.txt  Vinay_rdf_test.py  class_list.txt  classes_holistic.txt  classes_metrology.txt  classes_ordinal.txt  classes_perceptual.txt  classes_physicalistic.txt  classes_properties.txt  classes_reductionistic.txt  classes_siunits.txt  classes_units-extension.txt  component_test.py  demo.sqlite3  equation_instances  equations  equations.ttl  explore_emmo_middle.py  foaf_check.py  gugus.dot  gugus1.ttl  lab1.py  language  lecture_example_0.py  multi_graph_demo.py  multi_graph_demo_2.py  obj.txt  plot_rdf.py  pred.txt  qudt_quantitykind.ttl  qudt_unit.txt  subj.txt  test_04.py  test_entity.py  test_equation.py  test_extract_from_promo_ontology.py  test_ontospy.py  test_sparql.py  (+10 more)
OLD_TESTS/tests_vinay/: testcase1.ttl
OLD_TESTS/ui/: component_test.py
OLD_TESTS/unit/: conftest.py  test_utils.py
code-docs/: conf.py
code-docs/source/: tasks.rst
docker_attic/: Dockerfile_Claude  Dockerfile_Claude__  Dockerfile__
docs/: make_documentation.sh
docs/architecture_considerations/: diff_pyqt5_pyside6.doc  structures.md
docs/source/: conf.py  index.rst
src/code_generator/: __init__.py  code_generator.py  equation_graph.py  equation_sequencer.py  equations_sequencer.py  temp_leftovers.py  (+2 more)
tasks/: BehaviourLinker_01.py  EQUATION_SEQUENCING_COMPLETELY_SOLVED.md  EQUATION_WRITING_FINAL_SUMMARY.md  EQUATION_WRITING_SUMMARY.md  EquationComposer_01.py  Makefile  ProMo_BL.py  ProMo_BehaviourLinker.py  ProMo_BehaviourLinker_HAP_v0.py  ProMo_CSV_generator.py  ProMo_ModelComposer.py  ProMo_ModelInstantiate.py  ProMo_QUDT_handler.py  ProMo_RDF_Graph.py  ProMo_Read_RDF_Graph_Var_Expr.py  ProMo_TaskBuilder.py  ProMo_TaskFactory.py  ProMo_TaskFactoryNew.py  ProMo_Write_RDF_Graph_Var_Expr.py  ProMo_inst.py  ProMo_var_expr_ontology.py  TODO.txt  VARIABLE_EQUATION_EXPORT_COMPLETE.md  VARIABLE_EXPORT_README.md  _test.m  export_variables.py  export_variables_simple.py  gugus.py  h_new  make_ProMo_language_ontology.py  octave-workspace  output.txt  run.py  runner.py  task.sh  test.m  test_direct_equation_write.py  test_exchange_equation_write.py  test_fixed_export.py  test_simple_equation_write.py  (+3 more)
tests/: conftest.py  pizza_.ttl  test_entity.py  test_eq_selector_dlg.py  test_equation.py  test_instantiation_dlg.py
tools/: ui_compiler.py  ui_map.json
(+356 files in other folders)
