[project]
name = "ProMo"
version = "1.0.0"
description = "Software suite for ontology-based modelling and simulation"
authors = []
dependencies = ["pyside6==6.8.1"]
requires-python = ">=3.13, <3.14"
readme = "README.md"
license = { text = "" }

[dependency-groups]
lint = ["ruff>=0.8.4", "mypy>=1.14.1", "PySide6-stubs>=6.4.2.0"]
pytest = [
    "pytest-cov>=6.0.0",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.14.0",
    "pytest-testdox>=3.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings-python>=1.13.0",
]

[tool.ruff]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

lint.select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle - Error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle - Warning
    "UP", # pyupgrade
]

lint.ignore = [
    "E501", # line-too-long
    "F401", # unused-import
    #"W191", # tab-indentation
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
docs = "mkdocs serve"
resources = "pyside6-rcc mccpyside6/resources/resource.qrc -o mccpyside6/resources/resource.py"

[tool.pytest.ini_options]
addopts = "--color=yes --testdox"
testpaths = ["tests"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["src.resources.resource", "src.resources.resource_rc"]
ignore_errors = true
