[project]
name = "ProMo"
version = "1.0.0"
description = "Software suite for ontology-based modelling and simulation"
authors = []
dependencies = ["pyside6==6.8.1", "graphviz>=0.20.3", "networkx>=3.4.2", "ply>=3.11", "rdflib>=7.1.3", "attrs>=25.1.0", "numpy>=2.2.3"]
requires-python = ">=3.13, <3.14"
readme = "README.md"
license = { text = "" }

[project.optional-dependencies]
transitional = [
    "PyQt5>=5.15.11",
    "pypdf2>=3.0.1",
    "pydotplus>=2.0.2",
]
[dependency-groups]
lint = ["ruff>=0.8.4", "mypy>=1.14.1", "PySide6-stubs>=6.4.2.0"]
pytest = [
    "pytest-cov>=6.0.0",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.14.0",
    "pytest-testdox>=3.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings-python>=1.13.0",
]

[tool.ruff]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

lint.select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle - Error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle - Warning
    "UP", # pyupgrade
]

lint.ignore = [
    "E501", # line-too-long
    "F401", # unused-import
    #"W191", # tab-indentation
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
docs = "mkdocs serve"
resources = "pyside6-rcc mccpyside6/resources/resource.qrc -o mccpyside6/resources/resource.py"

[tool.pytest.ini_options]
addopts = "--color=yes --testdox"
testpaths = ["tests"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["packages/OntologyBuilder/OntologyEquationEditor/resources.py"]
ignore_errors = true
